<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		pembayaran
	 *	@date 		Thursday 22nd of June 2023 04:16:16 AM
	 *	@title 		Page 2
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/pembayaran" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_pembayaran_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__pembayaran_ek2"
					android:layout_width="375dp"
					android:layout_height="667dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__pembayaran_ek2_shape" />

				<View   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:layout_marginStart="37dp"
					android:layout_marginTop="64dp"
					android:layout_width="300dp"
					android:layout_height="100dp" />


				<RelativeLayout android:id="@+id/iconly_sharp_bold_arrow___left"
					android:layout_marginTop="32dp"
					android:layout_marginStart="33dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/fill_173"
						android:src="@drawable/fill_173"
						android:contentDescription="fill_173"
						 android:layout_marginStart="2.74dp"
						android:layout_marginTop="3.8dp"
						android:layout_width="14.51dp"
						android:layout_height="12.4dp" />

				</RelativeLayout>

				<TextView android:id="@+id/pembayaran_ek3"

					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="59dp"
					android:layout_marginTop="33dp"
					android:layout_width="105dp"
					android:layout_height="28dp"
					android:text="@string/pembayaran_ek3_string"
					 />

				<TextView android:id="@+id/pesanan"

					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="43dp"
					android:layout_marginTop="177dp"
					android:layout_width="77dp"
					android:layout_height="28dp"
					android:text="@string/pesanan_string"
					 />

				<TextView android:id="@+id/asrama_itb_jatinangor"

					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="43dp"
					android:layout_marginTop="93dp"
					android:layout_width="173dp"
					android:layout_height="46dp"
					android:text="@string/asrama_itb_jatinangor_string"
					 />

				<TextView android:id="@+id/alamat_pengiriman"

					android:textSize="12sp"
					android:textColor="@color/alamat_pengiriman_color"
					android:layout_marginLeft="44dp"
					android:layout_marginTop="72dp"
					android:layout_width="125dp"
					android:layout_height="23dp"
					android:text="@string/alamat_pengiriman_string"
					 />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="44dp"
					android:layout_marginTop="135dp"
					android:layout_width="127dp"
					android:layout_height="25dp" />

				<View   android:id="@+id/rectangle_6"
					android:background="@drawable/rectangle_6_shape"
					 android:layout_marginStart="219dp"
					android:layout_marginTop="79dp"
					android:layout_width="102dp"
					android:layout_height="25dp" />

				<ImageView android:id="@+id/fill_278"
					android:src="@drawable/fill_278"
					android:contentDescription="fill_278"
					 android:layout_marginStart="50dp"
					android:layout_marginTop="138dp"
					android:layout_width="13.82dp"
					android:layout_height="17dp" />

				<TextView android:id="@+id/isi_detail_alamat"

					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="68dp"
					android:layout_marginTop="139dp"
					android:layout_width="110dp"
					android:layout_height="23dp"
					android:text="@string/isi_detail_alamat_string"
					 />

				<TextView android:id="@+id/ganti_alamat"

					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="231dp"
					android:layout_marginTop="83dp"
					android:layout_width="93dp"
					android:layout_height="23dp"
					android:text="@string/ganti_alamat_string"
					 />


				<RelativeLayout android:id="@+id/group_4"
					android:layout_marginTop="199dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_4"
						android:background="@drawable/rectangle_4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="300dp"
						android:layout_height="100dp" />


					<RelativeLayout android:id="@+id/iconly_sharp_bold_heart"
						android:layout_marginTop="70dp"
						android:layout_marginStart="7dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/fill_202"
							android:src="@drawable/fill_202"
							android:contentDescription="@string/fill_202"
							 android:layout_marginStart="1.88dp"
							android:layout_marginTop="2.58dp"
							android:layout_width="16.25dp"
							android:layout_height="14.85dp" />

					</RelativeLayout>

					<TextView android:id="@+id/_23_000"
						android:textStyle="bold"
						android:textColor="@color/pembayaran_ek3_color"
						android:layout_marginLeft="13dp"
						android:layout_marginTop="31dp"
						android:layout_width="48dp"
						android:layout_height="20dp"
						android:text="@string/_23_000_string"
						 />

					<TextView android:id="@+id/_25_000"
						android:textStyle="bold"
						android:textColor="@color/alamat_pengiriman_color"
						android:layout_marginLeft="60dp"
						android:layout_marginTop="31dp"
						android:layout_width="48dp"
						android:layout_height="20dp"
						android:text="@string/_25_000_string"
						 />

					<TextView android:id="@+id/mie_ayam_bakso_cincang"
						android:textStyle="bold"
						android:textSize="12sp"
						android:textColor="@color/pembayaran_ek3_color"
						android:layout_marginLeft="13dp"
						android:layout_marginTop="13dp"
						android:layout_width="163dp"
						android:layout_height="23dp"
						android:text="@string/mie_ayam_bakso_cincang_string"
						 />

					<View   android:id="@+id/line_3"
						android:background="@drawable/line_3_shape"
						 android:layout_marginStart="60dp"
						android:layout_marginTop="40dp"
						android:layout_width="36dp"
						android:layout_height="1dp" />

					<ImageView android:id="@+id/image_1"
						android:src="@drawable/image_1"
						android:contentDescription="image_1"
						 android:layout_marginStart="230dp"
						android:layout_marginTop="4dp"
						android:layout_width="60dp"
						android:layout_height="60dp" />

				</RelativeLayout>

				<View   android:id="@+id/ellipse_1"
					android:background="@drawable/ellipse_1_shape"
					 android:layout_marginStart="267dp"
					android:layout_marginTop="268dp"
					android:layout_width="22dp"
					android:layout_height="22dp" />

				<View   android:id="@+id/ellipse_2"
					android:background="@drawable/ellipse_2_shape"
					 android:layout_marginStart="307dp"
					android:layout_marginTop="268dp"
					android:layout_width="22dp"
					android:layout_height="22dp" />

				<TextView android:id="@+id/__"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="274dp"
					android:layout_marginTop="269dp"
					android:layout_width="26dp"
					android:layout_height="28dp"
					android:text="@string/___string"
					 />

				<TextView android:id="@+id/_1__"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="293dp"
					android:layout_marginTop="269dp"
					android:layout_width="48dp"
					android:layout_height="28dp"
					android:text="1			 +"
					 />

				<View   android:id="@+id/rectangle_7"
					android:background="@drawable/rectangle_7_shape"
					 android:layout_marginStart="37dp"
					android:layout_marginTop="312dp"
					android:layout_width="302dp"
					android:layout_height="182dp" />

				<View   android:id="@+id/rectangle_8"
					android:background="@drawable/rectangle_8_shape"
					 android:layout_marginStart="37dp"
					android:layout_marginTop="312dp"
					android:layout_width="302dp"
					android:layout_height="182dp" />

				<View   android:id="@+id/line_3_ek1"
					android:background="@drawable/line_3_ek1_shape"
					 android:layout_marginStart="215dp"
					android:layout_marginTop="371dp"
					android:layout_width="36dp"
					android:layout_height="1dp" />

				<TextView
					android:id="@+id/_23_000"
					android:layout_gravity="center_vertical|end"
					android:gravity="end"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="211dp"
					android:layout_marginTop="363dp"
					android:layout_width="95dp"
					android:layout_height="29dp"
					android:text="25.000      23.000"
					/>

				<TextView
					android:id="@+id/_12_000"
					android:layout_gravity="center_vertical|end"
					android:gravity="end"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="211dp"
					android:layout_marginTop="392dp"
					android:layout_width="95dp"
					android:layout_height="29dp"
					android:text="12.000"
					/>

				<TextView
					android:id="@+id/_3_000"
					android:layout_gravity="center_vertical|end"
					android:gravity="end"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="211dp"
					android:layout_marginTop="421dp"
					android:layout_width="95dp"
					android:layout_height="29dp"
					android:text="3.000"
					/>

				<TextView
					android:id="@+id/_38_000"
					android:layout_gravity="center_vertical|end"
					android:gravity="end"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="211dp"
					android:layout_marginTop="450dp"
					android:layout_width="95dp"
					android:layout_height="29dp"
					android:text="38.000"
					/>

				<TextView
					android:id="@+id/harga"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="363dp"
					android:layout_width="140dp"
					android:layout_height="29dp"
					android:text="Harga"
					/>

				<TextView
					android:id="@+id/ongkir"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="392dp"
					android:layout_width="140dp"
					android:layout_height="29dp"
					android:text="Ongkir"
					/>

				<TextView
					android:id="@+id/biaya_layanan"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="421dp"
					android:layout_width="140dp"
					android:layout_height="29dp"
					android:text="Biaya Layanan"
					/>

				<TextView
					android:id="@+id/total_pembayaran"
					android:textSize="12sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="450dp"
					android:layout_width="140dp"
					android:layout_height="29dp"
					android:text="Total Pembayaran"
					/>


				<TextView android:id="@+id/ringkasan_pembayaran"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/pembayaran_ek3_color"
					android:layout_marginLeft="50dp"
					android:layout_marginTop="322dp"
					android:layout_width="180dp"
					android:layout_height="28dp"
					android:text="@string/ringkasan_pembayaran_string"
					 />

				<View   android:id="@+id/line_4"
					android:background="@drawable/line_4_shape"
					 android:layout_marginStart="37dp"
					android:layout_marginTop="450dp"
					android:layout_width="300dp"
					android:layout_height="1dp" />


				<RelativeLayout android:id="@+id/group_6"
					android:layout_marginTop="586dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_6_ek1"
						android:background="@drawable/rectangle_6_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="300dp"
						android:layout_height="56dp" />

					<TextView android:id="@+id/pesan_dan_antar_sekarang"
						android:textStyle="bold"
						android:textSize="16sp"
						android:textColor="@color/pembayaran_ek3_color"
						android:layout_marginLeft="46dp"
						android:layout_marginTop="19dp"
						android:layout_width="228dp"
						android:layout_height="31dp"
						android:text="@string/pesan_dan_antar_sekarang_string"
						 />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>